--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -15,7 +15,7 @@
     <h1><span class="text-skyblue">M</span>Y<span class="text-pink">P</span>ROFILE</h1>
     <br>
     <div id="parent">
-    <h2 class="text-pink child">名前<h2>
+    <h2 class="text-pink">名前<h2>
     <br>
     <p class="child">侍　太郎<p>
     <br>
