--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -8,14 +8,13 @@
     <!-- ここでGoogle Fontsを読み込みます-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
-  
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;400&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1><span class="text-skyblue">M</span>Y<span class="text-pink">P</span>ROFILE</h1>
     <br>
     <div id="parent">
-    <h2 class="text-pink">名前<h2>
+    <h2 class="text-pink">名前</h2>
     <br>
     <p class="child">侍　太郎<p>
     <br>
